3일차 정확도측정, 모델 저장 및 로딩하기

--- a/TensorflowJS/src/lec5_make.html
+++ b/TensorflowJS/src/lec5_make.html
@@ -17,6 +17,7 @@
  
 <body>
     <script>
+        //모델 만들기 실습
         console.log(tf); //node버전과 달리 전역변수 tf에 라이브러리가 담기게 된다
         // 1. 과거의 데이터를 준비합니다. 
         var 온도 = [20,21,22,23];
