--- a/TensorflowJS/src/html/lec_4mobilenet.html
+++ b/TensorflowJS/src/html/lec_4mobilenet.html
@@ -11,7 +11,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@1.0.0"> </script>
 
 <!-- 식별하고싶은 이미지를 img태그로 표시 -->
-<img id="img" src="tlfzgjadyd.png"></img>
+<img id="img" src="../../tlfzgjadyd.png"></img>
 
 <!-- 하지만 이 코드는 동작하지 않는다 직접 웹서버 장만해서 실행해야됨
     아파치나 엔진x등의 기술을 활용해서 이점을 해결해야한다는데
